syntax="proto3";

package greet;

option go_package="greetpb";

message Greet{

  string first_name=1;
  string last_name=2;
}

message GreetRequest{
  Greet greeting=1;
}

message GreetResponse{
  string result=1;
}

message GreetManyTimesRequest{
  Greet greeting = 1;
}

message GreetManyTimesResponse{
  string result=1;
}

service GreetService{
  // Unary service
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  // Streaming rpc
  rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
}
